# mpl-lego

./: .gitignore  pyproject.toml  setup.py
mpl_lego/: __init__.py  axes.py  ellipse.py  labels.py  legend.py  scatter.py  style.py
pratplot/: __init__.py  colorbar.py  ellipse.py  utils.py
