[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mpl_lego"
version = "0.0.1"
authors = [
    { name="Pratik Sachdeva", email="pratik.sachdeva@berkeley.edu"},
]
description = "Extra tools and functions for matplotlib"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]